# motion-lake-server

./: Dockerfile  ReadMe.md  build_docker.sh  cli.py  docker-compose.yml  launcher.sh  pyproject.toml  requirements.txt
src/core/: constants.py  engine.py  models.py  orchestrator.py  persistence.py  tables.py
src/core/bridge/: parquet_bridge.py
src/core/bridge/parsers/: __init__.py  base.py  bytes_parser.py  gtfs_parser.py  gtfs_rt_parser.py  json_parser.py
src/core/io_manager/: azure_blob.py  base.py  file_system.py
src/core/mixins/: loggable.py
src/core/persistence/: persistence.py  tables.py
src/core/storage/: base.py  parquet.py
src/core/storage/parsers/: base.py  bytes_parser.py  gtfs_parser.py  gtfs_rt_parser.py  json_parser.py
src/core/utils/: exception.py  numpy_json.py  zip_tools.py
src/runner/: server.py
